Preparing single app ui.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PlayStoreParallelDownload</string>
+    <string name="instagram">Instagram</string>
+    <string name="star">4.3</string>
 </resources>
